--- a/style.css
+++ b/style.css
@@ -1,26 +1,54 @@
+body {
+  display: flex;
+  justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
 .card-container {
   display: flex;
+  gap: 15px;
+  align-items: center;
+  border: 2px solid red;
+  padding: 10px;
+  height: 250px;
 }
 .card {
   display: grid;
-  grid-template-columns: 3;
-  grid-template-rows: 4;
-  gap: 15px;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 10px;
   grid-template-areas:
-    ""
-    ""
-    ""
-    "";
+    "img img img h3 h3 h3"
+    "img img img p p p"
+    "a a a a a a";
+
+  border: 2px solid black;
+  flex: 1 1 50%;
+  border-radius: 5px;
+  padding: 10px;
+  height: 100%;
+  width: 100%;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 .card img {
   grid-area: img;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: fill; /* Ensures the image covers the grid area */
+  align-self: center;
+  justify-self: center;
+  border: 2px solid blue;
 }
 .card h3 {
   grid-area: h3;
 }
 .card p {
   grid-area: p;
+  font-size: 1.25em;
 }
 .card a {
   grid-area: a;
+  text-decoration: none;
+  padding: 10px;
+  align-self: center;
 }
